# neo-c

./: (null).c  -C.c.error  .anc.c.error  .gitignore  .out  .tmux.conf  01main.c  01main.c.c  02constructors.c  02constructors.c.c  02transpile.c  02transpile.c.c  02transpile.nc  03output_code.c  03output_code.c.c  03output_code.nc  04heap.c  04heap.c.c  04heap.nc  05call.c  05call.c.c  05function.c  05function.c.c  05number.c  05number.c.c  05parse.c  05parse.c.c  05parse.nc  05pre_op.c  05pre_op.c.c  05type.c  05type.c.c  06str.c  06str.c.c  06type.c  06type.c.c  06type.nc  07function.c  07function.c.c  07function.nc  (+395 more)
9cc/: gen_x86.c.i  token.c.c  token.c.c.out  token.c.i
ayataka/: Makefile.in
c-src/: 03output_code.c  04heap.c  07function.c  08call.c  09pre_op.c  13gvar.c  14if.c  15while.c  17do_while.c  18switch.c  23field.c  26eq.c  27impl.c  28interface.c  31type2.c  35call2.c  36str2.c  37var2.c  39method2.c  41module2.c  42op2.c  44function4.c  45function5.c  46function6.c  48function8.c  49call3.c  51str3.c  53obj4.c  ccpp.c  x.c
cinatora/: 00web.c  00web.nc  01main.nc  Makefile  Neo.toml  common.h
clover3/: Makefile  bool.ssc  buffer.ssc  class.ssc  clover3  command.ssc  config.h  config.status  field.ssc  int.ssc  list.ssc  list_item.ssc  map.ssc  method.ssc  neo-c.h.out  object.ssc  regex.ssc  string.ssc  system.ssc  tuple1.ssc  tuple2.ssc  tuple3.ssc  tuple4.ssc  type.ssc  void.ssc
code/: C11_COMPLIANCE_MATRIX.md  External.c  HelloWorld.c  HelloWorld.nc  HelloWorld10-5.c  HelloWorld10-5.nc  HelloWorld10-6-2.c  HelloWorld10-6.nc  HelloWorld10-7.nc  HelloWorld10.c  HelloWorld2.nc  HelloWorld3.nc  HelloWorld4.c  HelloWorld5.nc  HelloWorld6.c  HelloWorld7.c  HelloWorld8.nc  HelloWorld9-2.nc  HelloWorld9-5.c  HelloWorld9-5.nc  HelloWorld9.c  HelloWorld9.nc  Makefile  README.md  a.out  aaa  attrs.nc  builtins  builtins.c.i  c_test_compat107.nc  c_test_compat108.nc  c_test_compat109.nc  c_test_compat11.c  c_test_compat110.nc  c_test_compat112.nc  c_test_compat117.nc  c_test_compat12.nc  c_test_compat120.nc  c_test_compat121.c.error  c_test_compat122.nc  (+291 more)
code2/: -O2.c.error  Makefile  a.c.i  all.c  all.c.error  all.c.i  all.nc  all.nc.i  all.o.c.error  headers_ipc.c  headers_ipc.c.i  headers_linux.c  headers_linux.c.i  headers_misc.c  headers_misc.c.i  headers_misc.nc  headers_net.c  headers_net.c.i  headers_posix.c  headers_posix.c.i  headers_subdir.c  headers_subdir.c.i  headers_subdir.nc  headers_thread.c  headers_thread.c.i  main.c  main.c.c.error  main.c.i
code3/: Makefile  mac_headers.c.c  mac_headers.nc
code4/: Makefile  attrs_split.c  attrs_split.nc  attrs_split.nc.i  enum_attrs.c  enum_attrs.nc  enum_attrs.nc.i  function_attrs.c  function_attrs.nc  function_attrs.nc.i  libc_kernel_attrs.c  libc_kernel_attrs.nc  libc_kernel_attrs.nc.i  struct_attrs.c  struct_attrs.nc  struct_attrs.nc.i
code5/: Makefile  memleak_stacktrace.nc  micro16_smoke.nc  micro32_smoke.nc  micro8_smoke.nc  micro_ram8k_collections.nc  native_backtrace_panic.nc  opt_basic  opt_basic.c  opt_basic.nc  opt_basic.nc.i  opt_heap_vanished.nc  opt_null  opt_null.c  opt_null.nc  opt_null.nc.i  opt_null_unwrap  opt_null_unwrap.c  opt_null_unwrap.nc  opt_null_unwrap.nc.i  opt_reassign  opt_reassign.c  opt_reassign.nc  opt_reassign.nc.i  opt_self_null  opt_self_null.c  opt_self_null.nc  opt_self_null.nc.i  opt_string_assign  opt_string_assign.c  opt_string_assign.nc  opt_string_assign.nc.i  opt_value  opt_value.c  opt_value.nc  opt_value.nc.i  opt_vanished  opt_vanished.c  opt_vanished.nc  opt_vanished.nc.i  (+120 more)
code6/: 01main.c  02transpile.c  04heap.c  05parse.c  07function.c  11number.c  12var.c  13gvar.c  14if.c  15while.c  17do_while.c  18switch.c  19struct.c  20union.c  21enum.c  22typedef.c  23field.c  24method.c  25obj.c  26eq.c  27impl.c  28interface.c  29module.c  30op.c  31come_main.c  Makefile  c_test_compat10  c_test_compat10.nc  c_test_compat10.nc.i  c_test_compat100.nc  c_test_compat100.nc.i  c_test_compat101.nc  c_test_compat101.nc.i  c_test_compat102.nc  c_test_compat102.nc.i  c_test_compat103.nc  c_test_compat103.nc.i  c_test_compat104  c_test_compat104.nc  c_test_compat104.nc.i  (+596 more)
cpm/: Makefile  README.md  cpm.nc
lcc/: Illburg.i.cpp.out  aaa  alpha.c  dagcheck.c  fast_build.sh  lburg  librcc.a.i  makefile  mips.c  sparc.c  sparc.c.i  x86.c  x86linux.c  y.tab.c.c  y.tab.c.c.out
mf/: Makefile  Neo.toml  main.c  main.nc
minux10/: Makefile  README.md  aaa  link.ld  pico_emu.c  test.out  utkernel.c  utkernel.elf  utkernel.map  utkernel.nc
minux12/: Makefile  README.md  hello.nc  startup.S
minux13/: Makefile  README.md  hello.nc  link.ld
minux14/: Makefile  README.md  basic_ide.nc  hello.nc
minux15/: Makefile  README.md  hello.nc  pic_uart.c  startup.asm
minux16/: Makefile  README.md  collections.nc  startup.S
minux2/: CMakeLists.txt  README.md  all_build.sh  clean.sh  install_pkg.sh  main.c  main.c.c  main.c.i  main.nc  main.nc.i  main_.c  run.sh  timer.c  timer.c.i  timer.nc  timer_.c  update.sh
minux9/: .emu-test-neoc.out  .manual-neoc-crash-context.out  .manual-neoc-hello-debug.out  .manual-neoc-hello-debug2.out  .manual-neoc-hello-full.out  .manual-neoc-hello-step.out  .manual-neoc-ls.out  .manual-toolchain.out  Makefile  README.md  a.c  abst.sh  as-static.c  as.c  as.h  asmhello2.c  asmhello3.c  b.c  boot.S  c.c  cat_neoc.nc  catend.sh  cc.c  common.h  cpp.c  direct_proc_min.c  echo_neoc.nc  elf.h  entry.S  fast_build.sh  fd_blast.c  filecat.sh  fs-test.c  fs.S  fs.c  fs.nc  go.sh  grep.c  hexdump.c  hostname.c  (+86 more)
msxide/: .gitignore  Makefile  Neo.toml  README.md
mytest/: vector_to_span_test  vector_to_span_test.nc
pico/: version.h
shsh/: Makefile  Neo.toml  README.md  fast_build.sh  main.c  main.nc
small/: Makefile  Neo.toml  README.md  neo-c-str.c  small.ld
src/: 05parse.nc  07function.nc  09pre_op.nc  11number.nc  13gvar.nc  14if.nc  18switch.nc  21enum.nc  26eq.nc  28interface.nc  36str2.nc  37var2.nc  39method2.nc  40obj2.nc  42op2.nc  43function3.nc  49call3.nc  51str3.nc  52obj3.nc  common.h  compiler.c  llvm.cpp  llvm_common.hpp  neo-c-str.nc  (+4 more)
(+325 files in other folders)
